laba #4: fix issues in UserController