@@ -4,6 +4,7 @@ import com.example.petition.entity.dto.UserDto;
 import com.example.petition.service.UserService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,6 +12,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/user")
@@ -25,15 +27,14 @@ public class UserController {
     public ResponseEntity<UserDto> getUserById(@PathVariable Long id) {
         return this.userService.getUserById(id)
                 .map(user -> ResponseEntity.ok(this.modelMapper.map(user, UserDto.class)))
-                .orElseThrow(() -> new RuntimeException("Error"));
+                .orElse(ResponseEntity.status(HttpStatus.CONFLICT).build());
     }
 
     @GetMapping
-    public ResponseEntity<List<UserDto>> getUsers() {
-        List<UserDto> userDtos = this.userService.getUsers().stream()
+    public List<UserDto> getUsers() {
+        return this.userService.getUsers().stream()
                 .map(user -> this.modelMapper.map(user, UserDto.class))
-                .toList();
-        return ResponseEntity.ok(userDtos);
+                .collect(Collectors.toList());
     }
 
 }
